# ComfyUI-Spectrum-ZImage-Proper

./: .gitignore  README.md  nodes.py  pyproject.toml
.github/workflows/: publish.yml
comfyui_spectrum_zimage/: __init__.py  config.py  forecast.py  runtime.py  zimage.py
tests/: smoke_runtime.py
